Cropped Sean's pic; fixed hover issue; changed stacking order in header div.

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,16 @@ h3 {
 
 
 /* Title Row Classes & IDs */
+.front-div {
+  position: static;
+  z-index: 1000;
+}
+
+.back-div {
+  position: static;
+  z-index: 0;
+}
+
 #title {
   background-color: #282826;
   padding: 2% 2% 0 2%;
@@ -90,16 +100,16 @@ h3 {
 .masonry-img {
   transition: all .2s ease-in-out;
   opacity: 0.5;
-  overflow-y:visible;
-
 }
 
-/* .masonry-img:hover {
+.masonry-img:hover {
   transform: scale(1.5);
+    -webkit-backface-visibility: hidden; /* add to fix webkit bug jitter */
+    -webkit-transform: scale(1.5); /* add to fix webkit bug jitter */
   opacity: 1;
   border: 5px solid #fff;
   box-shadow: 5px 5px 3px grey;
-} */
+}
 
 
 .long-text {
@@ -120,6 +130,12 @@ h3 {
 
 .masonry-img {
 	width: 100%;
+  overflow: visible;
+}
+
+#img-masonry {
+  position: static;
+  overflow: visible;
 }
 
 article {
